# bearmetal-dashboard

./: .coveragerc  CONTRIBUTING.rst  HACKING.rst  README.rst  requirements.txt  setup.cfg  tox.ini
bearmetal_dashboard/: __init__.py  index.py
bearmetal_dashboard/cmd/: dashboard.py
bearmetal_dashboard/static/css/: semantic.css  semantic.min.css
bearmetal_dashboard/templates/: index.html
bearmetal_dashboard/tests/: test_bearmetal_dashboard.py
doc/source/: conf.py  index.rst  installation.rst
