[metadata]
name = bearmetal-dashboard
summary =  Landing page and dashboard for the OpenStack Ironic project
description-file =
    README.rst
author = Jim Rollenhagen
author-email = jim@jimrollenhagen.com
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    bearmetal_dashboard

[entry_points]
console_scripts =
    dashboard = bearmetal_dashboard.cmd.dashboard:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
